versioned_docs/version-2.8/reference/subsystems/pyupgrade.mdx
---
title: pyupgrade
description: |
  Upgrade syntax for newer versions of the language (https://github.com/asottile/pyupgrade).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Upgrade syntax for newer versions of the language (https://github.com/asottile/pyupgrade).

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[pyupgrade]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]pyupgrade-skip`}
  env_repr='PANTS_PYUPGRADE_SKIP'
  toml_repr={`[pyupgrade]
skip = <bool>`}
  default_repr={`False`}
>

Don&#x27;t use pyupgrade when running `/home/josh/work/scie-pants/dist/pants fmt` and `/home/josh/work/scie-pants/dist/pants lint`.

</Option>

### `args`

<Option
  cli_repr={`--pyupgrade-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_PYUPGRADE_ARGS'
  toml_repr={`[pyupgrade]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to pyupgrade, e.g. `--pyupgrade-args="--py39-plus --keep-runtime-typing"`

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--pyupgrade-version=<str>`}
  env_repr='PANTS_PYUPGRADE_VERSION'
  toml_repr={`[pyupgrade]
version = <str>`}
  default_repr={`pyupgrade>=2.29.0,<2.30`}
>

Requirement string for the tool.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--pyupgrade-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_PYUPGRADE_EXTRA_REQUIREMENTS'
  toml_repr={`[pyupgrade]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--pyupgrade-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_PYUPGRADE_INTERPRETER_CONSTRAINTS'
  toml_repr={`[pyupgrade]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython>=3.7"\n]`}
>

Python interpreter constraints for this tool.

</Option>

### `lockfile`

<Option
  cli_repr={`--pyupgrade-lockfile=<str>`}
  env_repr='PANTS_PYUPGRADE_LOCKFILE'
  toml_repr={`[pyupgrade]
lockfile = <str>`}
  default_repr={`<default>`}
>

Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.8.1/src/python/pants/backend/python/lint/pyupgrade/lockfile.txt for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds.

To use a custom lockfile, set this option to a file path relative to the build root, then run `./pants generate-lockfiles --resolve=pyupgrade`.

Lockfile generation currently does not wire up the `[python-repos]` options. If lockfile generation fails, you can manually generate a lockfile, such as by using pip-compile or `pip freeze`. Set this option to the path to your manually generated lockfile. When manually maintaining lockfiles, set `[python].invalid_lockfile_behavior = 'ignore'`.

</Option>

### `console_script`

<Option
  cli_repr={`--pyupgrade-console-script=<str>`}
  env_repr='PANTS_PYUPGRADE_CONSOLE_SCRIPT'
  toml_repr={`[pyupgrade]
console_script = <str>`}
  default_repr={`pyupgrade`}
>

The console script for the tool. Using this option is generally preferable to (and mutually exclusive with) specifying an --entry-point since console script names have a higher expectation of staying stable across releases of the tool. Usually, you will not want to change this from the default.

</Option>

### `entry_point`

<Option
  cli_repr={`--pyupgrade-entry-point=<str>`}
  env_repr='PANTS_PYUPGRADE_ENTRY_POINT'
  toml_repr={`[pyupgrade]
entry_point = <str>`}
  default_repr={`None`}
>

The entry point for the tool. Generally you only want to use this option if the tool does not offer a --console-script (which this option is mutually exclusive with). Usually, you will not want to change this from the default.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
